[gd_scene load_steps=12 format=3 uid="uid://ci1exebmyk3ss"]

[ext_resource type="Script" path="res://do stuff.gd" id="1_6gfhg"]
[ext_resource type="Material" uid="uid://c62tdlm6rsosp" path="res://ground1.tres" id="2_8fe1u"]
[ext_resource type="PackedScene" uid="uid://cx7kfomt46lmr" path="res://pillar.tscn" id="2_qb4qq"]
[ext_resource type="Script" path="res://camera.gd" id="5_cm106"]
[ext_resource type="Environment" uid="uid://dkg0hgny6p857" path="res://environment1.tres" id="6_1cdps"]
[ext_resource type="Texture2D" uid="uid://d1h3mtrcxwwtn" path="res://spr_heaven.png" id="7_7ppgg"]
[ext_resource type="Script" path="res://stuff.gd" id="8_ak60v"]
[ext_resource type="Texture2D" uid="uid://6btej72m8kav" path="res://bit.svg" id="8_rilfk"]

[sub_resource type="PlaneMesh" id="PlaneMesh_nfdl2"]

[sub_resource type="BoxMesh" id="BoxMesh_5kory"]
size = Vector3(8, 0.25, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kilnd"]
diffuse_mode = 3
albedo_color = Color(0.65098, 0.65098, 0.65098, 1)
refraction_scale = 1.0
grow_amount = 1.0
distance_fade_max_distance = 1.0

[node name="Node2D" type="Node3D"]
script = ExtResource("1_6gfhg")

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(1000, 0, 0, 0, 1, 0, 0, 0, 1000, 0, 0, 0)
mesh = SubResource("PlaneMesh_nfdl2")
surface_material_override/0 = ExtResource("2_8fe1u")

[node name="Base" type="MeshInstance3D" parent="."]
visibility_range_fade_mode = 1
mesh = SubResource("BoxMesh_5kory")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_kilnd")

[node name="LogLog" parent="." instance=ExtResource("2_qb4qq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.125, 0)

[node name="Jugg" parent="." instance=ExtResource("2_qb4qq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8, 0.125, 0)

[node name="WestCraft15" parent="." instance=ExtResource("2_qb4qq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.125, 0)

[node name="Elili" parent="." instance=ExtResource("2_qb4qq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.125, 0)

[node name="ThePeashooter23" parent="." instance=ExtResource("2_qb4qq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8, 0.125, 0)

[node name="M3KAI5ER44" parent="." instance=ExtResource("2_qb4qq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.125, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16.5, 24)
current = true
script = ExtResource("5_cm106")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("6_1cdps")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.626699, -0.475209, 0.617596, 0.0793023, 0.749534, 0.657199, -0.775216, 0.460843, -0.432047, 0, 21.79, 0)

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="spr_heaven" type="Sprite3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 16.66, 0)
visible = false
billboard = 2
double_sided = false
texture_filter = 0
texture = ExtResource("7_7ppgg")

[node name="bit" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.375, 0.45, -0.715)
billboard = 2
texture_filter = 0
texture = ExtResource("8_rilfk")

[node name="stuff" type="Node" parent="."]
script = ExtResource("8_ak60v")
